Updated encoding to UTF-8

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ï»¿<!doctype html>
  
 <html lang="en">
 <head>
@@ -135,7 +135,7 @@
         <div class="span3">
           <div class="well sidebar-nav">
             <ul class="nav nav-list" id="catalog">
-              <li class="nav-header">Dra menyrad nedan till höger</li>
+              <li class="nav-header">Dra menyrad nedan till hÃ¶ger</li>
               <li type="1">1 kolumn text</li>
               <li type="2">2 kolumner text</li>
               <li type="3">3 kolumner text</li>
@@ -152,7 +152,7 @@
       <hr>
 
       <footer>
-        <p>© Company 2012</p>
+        <p>Â© Company 2012</p>
       </footer>
 
     </div>
